Bug 155140 - right click in gallery always enters into insert mode
Summary: right click in gallery always enters into insert mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0 all versions
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.4 target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Gallery
  Show dependency treegraph
 
Reported: 2023-05-03 21:29 UTC by Justin L
Modified: 2023-05-18 20:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2023-05-03 21:29:22 UTC
In the gallery, when you right-click on a gallery image, the mouse turns into drag-and-drop mode as soon as you move the mouse.

For example, I right click to "insert as background image." on a button image I found in the right-hand side gallery sidebar. When I move the mouse, the cursor changes to a plus-hand. But it does with this everything - including a right click and then choosing nothing, but clicking outside of the popup menu to close it.

Basically, as soon as you right-click, you are in drag and drop mode.

This started in LO 7.0 with commit fa8c85fa90e9565a357b247a69f930098d11ff84
Author: Caolán McNamara on Thu Jan 16 16:38:15 2020 +0000
    weld gallery panel
    
Assuming this is a GTK only problem because I can avoid it by running
SAL_USE_VCLPLUGIN=gen instdir/program/soffice
 
CC: Caolán
Comment 1 Caolán McNamara 2023-05-04 08:31:42 UTC
happens with GDK_BACKEND=x11 but not my default of GDK_BACKEND=wayland which must be why I never noticed until now
Comment 2 Commit Notification 2023-05-04 12:15:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/b4254d6cf27849ef4d61d94570b2cf27cc40f61b

Resolves: tdf#155140 gallery right click for context menu doesn't consume event

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-05-04 19:22:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a831886004fba93a4eb0e5675b1e3e8afbe3d3bb

Resolves: tdf#155140 gallery right click for context menu doesn't consume event

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2023-05-05 05:00:38 UTC
Fixed in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5e7327e9313e2d9fe2f0defb30d3e7dc28c0b2ce
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Bad in Version: 7.5.2.1 (X86_64) / LibreOffice Community
Build ID: e8bf3b441b8370f8440b0339fd9490765a8d57ca
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded