Resolves: tdf#155140 gallery right click for context menu doesn't consume event

Change-Id: I13b6d62561e3d9eed47f81c4268a6a32ff108b40
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151289
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>